Login prototype and gulp build

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello, world.</title>
+		<title>TDU CTF 2015</title>
+		<link rel="stylesheet" href="./semantic/dist/semantic.min.css" type="text/css" />
 	</head>
 	<body>
-		<h1>Hello, world.</h1>
 	</body>
+	<script src="js/main.js"></script>
 </html>
