Change initial background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>TDUCTF 2015</title>
 		<link rel="stylesheet" href="./semantic/dist/semantic.min.css" type="text/css" />
 	</head>
-	<body id="content" style="background-color: #1abc9c;">
+	<body id="content" style="background-color: #000;">
 	</body>
 	<script src="js/index.js"></script>
 	<script src="./node_modules/particles.js/particles.js"></script>
