Add error parser and display error notification

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 				bottom: 0;
 				z-index: -1;
 			}
+			.floating.negative.message {
+				position: fixed;
+				right: 10px;
+				bottom: 10px;
+				width: 300px;
+				display: inline-block;
+				z-index: 10;
+			}
 		</style>
 	</head>
 	<body id="content" style="background-color: #000;">
