Update font style definition

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				src: url('font/mplus-2p-regular.ttf')
 				format("truetype");
 			}
-			* {
+			body * {
 				font-family: mplus-2p-regular;
 			}
 			code {
