Use pre-built css version semantic-ui

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TDUCTF 2015</title>
-		<link rel="stylesheet" href="./semantic/dist/semantic.min.css" type="text/css" />
+		<link rel="stylesheet" href="./node_modules/semantic-ui-css/semantic.min.css" type="text/css" />
 		<style>
 			@font-face
 			{
