Add <code> tag's style

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
 				src: url('font/mplus-2p-regular.ttf')
 				format("truetype");
 			}
-			body * {
+			html body div {
 				font-family: mplus-2p-regular;
+			}
+			.inlineCode {
+				padding: auto 0.4em;
+				border-color: #95a5a6;
+				background-color: #ecf0f1;
+			}
+			.code {
+				padding: 0.5em;
+				border-color: #95a5a6;
+				background-color: #ecf0f1;
 			}
 			code {
 				font-family: mplus-2m-regular;
