Change application name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>TDUCTF 2015</title>
+		<title>Lepus-CTF</title>
 		<link rel="stylesheet" href="./node_modules/semantic-ui-css/semantic.min.css" type="text/css" />
 		<style>
 			@font-face
