Change to Lepus-CTF

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			}
 		</style>
 	</head>
-	<body id="content" style="background-color: #000;">
+	<body id="content" style="background-color: #f7c5d2;">
 	</body>
 	<script src="js/index.js"></script>
 	<script src="./node_modules/particles.js/particles.js"></script>
